Add search by user
