# back/src/resources/user/user.types.ts
@@ -13,3 +13,8 @@ export type UpdateUserDTO = Pick<
 export type UserDTO = Omit<User, 'password'>;
 
 export type CardUser = Pick<User, 'id' | 'name'>;
+
+export type SearchUser = {
+  email?:string,
+  name?: string
+}
